--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
 .products {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
 }
 
 .products div {
-    width: 30%;
+    /* width: 30%; */
     margin: 10px 10px 20px 10px;
     padding: 0px;
 }
 
 img {
-    width: 50%;
+    width: 80%;
+}
+
+.flower {
+    display: flex;
+    justify-content: center;
+}
+
+.flower div {
+    width: 500px;
 }
