--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+header {
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 50px;
+}
+
+header img {
+    width: 20%;
+    padding-left: 50px;
+}
+
 .products {
     display: flex;
     flex-wrap: wrap;
@@ -7,7 +17,7 @@
 
 .products div {
     /* width: 30%; */
-    margin: 10px 10px 20px 10px;
+    margin: 10px 10px 50px 10px;
     padding: 0px;
 }
 
@@ -23,3 +33,14 @@ img {
 .flower div {
     width: 500px;
 }
+
+p, h3 {
+    margin: 10px;
+}
+
+button {
+    width: 40%;
+    background-color: #394f4c;
+    color: #fff;
+}
+
