--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
 header {
     border-bottom: 1px solid lightgray;
     margin-bottom: 50px;
@@ -44,3 +49,34 @@ button {
     color: #fff;
 }
 
+
+footer {
+    height: 50px;
+    border-top: lightgray solid 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner {
+    display: flex;
+    justify-content: center;
+    top: 20%;
+    margin: auto;
+    border: 20px solid gray;
+    border-top: 20px solid cyan;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+
+.back {
+    width: 100px;
+    margin-left: 100px;
+}
