--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ header img {
     padding-left: 50px;
 }
 
+header img:hover {
+    cursor: pointer;
+}
+
 .products {
     display: flex;
     flex-wrap: wrap;
@@ -21,7 +25,6 @@ header img {
 }
 
 .products div {
-    /* width: 30%; */
     margin: 10px 10px 50px 10px;
     padding: 0px;
 }
